Cooperate with module transplantation and packaging.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Ib34e2e1bc9ad449f4324f7f9f235357f2b665357

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,7 @@ endif
 
 else
 
-SUBDIRS = . browser cypress_test
+SUBDIRS = ossii/src . browser cypress_test
 
 SUBDIRS += ossii
 
@@ -80,13 +80,21 @@ endif
 
 AM_LDFLAGS = -Wl,-E -lpam $(ZLIB_LIBS) $(ZSTD_LIBS) ${PNG_LIBS} ${FONTCONFIG_LIBS}
 
+if ENABLE_DEBUG
+AM_LDFLAGS += -Wl,-E,-rpath,"@abs_top_builddir@/ossii/src/lib/.libs"
+endif
+
 # Clang's linker doesn't like -pthread.
 if !HAVE_CLANG
 AM_LDFLAGS += -pthread
 endif
 
+OSSII_LIBS = ossii/src/lib/@LIB_NAME@.la
+
 if ENABLE_SSL
 AM_LDFLAGS += ${OPENSSL_LIBS}
+oxoolwsd_LDADD = ${OSSII_LIBS}
+oxoolconfig_LDADD = ${OSSII_LIBS}
 else
 oxoolwsd_LDADD = ${OPENSSL_LIBS}
 oxoolconfig_LDADD = ${OPENSSL_LIBS}
@@ -142,8 +150,7 @@ oxoolwsd_sources = common/Crypto.cpp \
                   wsd/ProofKey.cpp \
                   wsd/QuarantineUtil.cpp
 
-oxoolwsd_SOURCES = $(oxoolwsd_sources) \
-                  $(shared_sources)
+oxoolwsd_SOURCES = wsd/MainOXOOLWSD.cpp
 
 EXTRA_oxoolwsd_DEPENDENCIES = browser/node_modules
 
@@ -162,19 +169,13 @@ noinst_PROGRAMS += \
 endif
 
 connect_SOURCES = tools/Connect.cpp \
-                  common/DummyTraceEventEmitter.cpp \
-                  common/Log.cpp \
-                  common/Protocol.cpp \
-                  common/StringVector.cpp \
-                  common/Util.cpp
+                  common/DummyTraceEventEmitter.cpp
+connect_LDADD = ${OSSII_LIBS}
 
 lokitclient_SOURCES = common/Log.cpp \
                       common/DummyTraceEventEmitter.cpp \
-                      tools/KitClient.cpp \
-                      common/Protocol.cpp \
-                      common/StringVector.cpp \
-                      common/TraceEvent.cpp \
-                      common/Util.cpp
+                      tools/KitClient.cpp
+lokitclient_LDADD = ${OSSII_LIBS}
 
 noinst_LIBRARIES = libsimd.a
 libsimd_a_SOURCES = kit/DeltaSimd.c
@@ -184,10 +185,9 @@ oxoolforkit_sources = kit/ChildSession.cpp \
                      kit/ForKit.cpp \
                      kit/Kit.cpp
 
-oxoolforkit_SOURCES = $(oxoolforkit_sources) \
-                     $(shared_sources)
+oxoolforkit_SOURCES = $(oxoolforkit_sources)
 
-oxoolforkit_LDADD = libsimd.a
+oxoolforkit_LDADD = libsimd.a ${OSSII_LIBS}
 
 if ENABLE_LIBFUZZER
 oxoolforkit_SOURCES += \
@@ -239,12 +239,13 @@ httpecho_fuzzer_LDADD = libsimd.a
 endif # ENABLE_LIBFUZZER
 
 clientnb_SOURCES = net/clientnb.cpp \
-                   common/DummyTraceEventEmitter.cpp \
-                   common/Log.cpp \
-                   common/StringVector.cpp \
-                   common/Util.cpp
+                   common/DummyTraceEventEmitter.cpp
+clientnb_LDADD = ${OSSII_LIBS}
 
 oxoolmount_SOURCES = tools/mount.cpp
+if ENABLE_DEBUG
+oxoolmount_LDADD = ${OSSII_LIBS}
+endif
 
 oxoolmap_SOURCES = tools/map.cpp
 
@@ -252,20 +253,16 @@ oxoolconvert_SOURCES = tools/Tool.cpp
 
 oxoolstress_CPPFLAGS = -DTDOC=\"$(abs_top_srcdir)/test/data\" ${include_paths}
 oxoolstress_SOURCES = tools/Stress.cpp \
-                     common/DummyTraceEventEmitter.cpp \
-                     $(shared_sources)
+                     common/DummyTraceEventEmitter.cpp
+oxoolstress_LDADD = ${OSSII_LIBS}
 
 oxoolconfig_SOURCES = tools/Config.cpp \
 		     tools/ConfigMigrationAssistant.cpp \
-		     common/DummyTraceEventEmitter.cpp \
-		     common/Crypto.cpp \
-		     common/Log.cpp \
-		     common/StringVector.cpp \
-		     common/Util.cpp
+		     common/DummyTraceEventEmitter.cpp
 
 oxoolsocketdump_SOURCES = tools/WebSocketDump.cpp \
-			 common/DummyTraceEventEmitter.cpp \
-			 $(shared_sources)
+			 common/DummyTraceEventEmitter.cpp
+oxoolsocketdump_LDADD = ${OSSII_LIBS}
 
 wsd_headers = wsd/Admin.hpp \
               wsd/AdminModel.hpp \
@@ -397,7 +394,7 @@ else
 # Use oxoolwsd to cleanup jails, if any. If it fails, we may have a broken/old oxoolwsd binary, remove it to rebuild.
 # A CI box may switch branches without cleaning up the binaries, if oxoolwsd from a broken branch is used here
 # it will fail all subsequent builds, until it's rebuilt from the new branch. So removing oxoolwsd after failing is needed.
-CLEANUP_COMMAND=if test -s ./oxoolwsd; then echo "Cleaning up..." && ./oxoolwsd --disable-oxool-user-checking --cleanup --o:logging.level=trace || rm ./oxoolwsd; fi
+CLEANUP_COMMAND=true
 endif
 
 CLEANUP_COVERAGE=rm -rf ${abs_top_srcdir}/gcov; find . -iname "*.gc??" -delete
@@ -409,7 +406,7 @@ CAPABILITIES = $(if @ENABLE_SETCAP@,true,false)
 RUN_GDB = $(if $(GDB_FRONTEND),$(GDB_FRONTEND),gdb --tui --args)
 
 if ENABLE_SETCAP
-SET_CAPS_COMMAND=sudo @SETCAP@ cap_fowner,cap_chown,cap_mknod,cap_sys_chroot=ep oxoolforkit && sudo @SETCAP@ cap_sys_admin=ep oxoolmount && sudo @SETCAP@ cap_dac_override,cap_net_bind_service=ep oxoolwsd
+SET_CAPS_COMMAND=sudo @SETCAP@ cap_fowner,cap_chown,cap_mknod,cap_sys_chroot=ep .libs/oxoolforkit && sudo @SETCAP@ cap_sys_admin=ep .libs/oxoolmount && sudo @SETCAP@ cap_dac_override,cap_net_bind_service=ep .libs/oxoolwsd
 else
 SET_CAPS_COMMAND=echo "Skipping capability setting"
 endif
@@ -471,7 +468,7 @@ COMMON_PARAMS = \
 	--o:admin_console.username=admin --o:admin_console.password=admin
 
 run: setup-wsd
-	./oxoolwsd $(COMMON_PARAMS) \
+	.libs/oxoolwsd $(COMMON_PARAMS) \
 			--config-file="$(abs_top_srcdir)/@PACKAGE@.xml" \
 			--o:security.capabilities="$(CAPABILITIES)" \
 			--o:logging.file[@enable]=${OUTPUT_TO_FILE} --o:logging.level=trace \
