--- a/debian/rules
+++ b/debian/rules
@@ -19,3 +19,9 @@ override_dh_auto_test:
 
 override_dh_installinit:
 	# no init.d scripts here, assume systemd
+
+override_dh_auto_install:
+	dh_auto_install
+
+override_dh_install:
+	dh_install
