--- a/ossii/.gitignore
+++ b/ossii/.gitignore
@@ -3,10 +3,15 @@
 # browser
 browser/branding
 
-#defelop
+# developer
 *.la
 .libs/
 OxOOL.h
 *-xml-config
 *-module-maker
 *.pc
+
+# debian-template
+debian-template/control
+debian-template/copyright
+debian-template/rules
