--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,8 @@ missing
 stamp-h1
 stamp-h2
 stamp-h3
-m4
+m4/lt*
+m4/libtool.m4
 debian/oxoolwsd.postinst
 common/support-public-key.hpp
 compile_commands.json
@@ -174,3 +175,8 @@ debian/oxool.*
 /*-systemplate-setup
 /*.spec
 /.libs
+
+debian/control
+debian/copyright
+debian/rules
+debian/oxool*
