wsd: add StorageConnectionManager & WopiProxy
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I7dbd32bdec2155a36517973fbe08fcb7394a33fd

--- a/ossii/src/lib/Makefile.am
+++ b/ossii/src/lib/Makefile.am
@@ -72,10 +72,12 @@ oxoolwsd_sources = $(top_srcdir)/common/Crypto.cpp \
                   $(top_srcdir)/wsd/FileServerUtil.cpp \
                   $(top_srcdir)/wsd/RequestDetails.cpp \
                   $(top_srcdir)/wsd/Storage.cpp \
+                  $(top_srcdir)/wsd/StorageConnectionManager.cpp \
                   $(top_srcdir)/wsd/HostUtil.cpp \
                   $(top_srcdir)/wsd/TileCache.cpp \
                   $(top_srcdir)/wsd/ProofKey.cpp \
-                  $(top_srcdir)/wsd/QuarantineUtil.cpp
+                  $(top_srcdir)/wsd/QuarantineUtil.cpp \
+                  $(top_srcdir)/wsd/WopiProxy.cpp
 
 oxoolcore_sources = \
                     OxOOL/Module/Base.cpp \
