js/global.js contains localizable strings
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Icdb0f8b933523e436980f355a6495aa0b7fe8672

--- a/browser/Makefile.am
+++ b/browser/Makefile.am
@@ -721,6 +721,7 @@ pot:
 		admin/admin.strings.js \
 		admin/src/*.js \
 		admin/js/admin.menu.js \
+		js/global.js \
 		js/w2ui-1.5.rc1.js \
 		src/control/ColorPicker.js \
 		src/control/Control.AlertDialog.js \
