xtract some functions to extra files for in process mode
Extract some functions from ForKit.cpp and OXOOLWSD.cpp to new files
so we can do a kit in process mode without using ifdef directives.

Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I5a992102d3cccf7c5d00ec83e29efd07effdfa21

--- a/Makefile.am
+++ b/Makefile.am
@@ -183,7 +183,8 @@ oxoolforkit_sources = kit/ChildSession.cpp \
                      kit/ForKit.cpp \
                      kit/Kit.cpp
 
-oxoolforkit_SOURCES = $(oxoolforkit_sources)
+oxoolforkit_SOURCES = $(oxoolforkit_sources) \
+                      kit/forkit-main.cpp
 
 oxoolforkit_LDADD = libsimd.a ${OSSII_LIBS}
 
@@ -194,6 +195,7 @@ oxoolforkit_SOURCES += \
 common_fuzzer_sources = \
 		       common/DummyTraceEventEmitter.cpp \
 		       $(oxoolwsd_sources) \
+		       wsd/oxoolwsd-inproc.cpp \
 		       $(oxoolforkit_sources) \
 		       $(shared_sources)
 
