added oxoolwsd-inproc executable
Added build rules for coolwsd-inproc and some run command to use it.

Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I5d6a943617f8f89920b44da24cd3b57479237329

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,6 +31,9 @@ bin_PROGRAMS = \
 if ENABLE_LIBFUZZER
 else
 bin_PROGRAMS += oxoolwsd
+if ENABLE_DEBUG
+bin_PROGRAMS += oxoolwsd-inproc
+endif
 endif
 
 dist_bin_SCRIPTS = oxoolwsd-systemplate-setup
@@ -188,6 +191,16 @@ oxoolforkit_SOURCES = $(oxoolforkit_sources) \
 
 oxoolforkit_LDADD = libsimd.a ${OSSII_LIBS}
 
+if ENABLE_DEBUG
+oxoolwsd_inproc_SOURCES = $(oxoolwsd_sources) \
+                         $(shared_sources) \
+                         $(oxoolforkit_sources) \
+                         wsd/oxoolwsd-inproc.cpp
+
+oxoolwsd_inproc_LDADD = ${oxoolwsd_LDADD} \
+                       ${oxoolforkit_LDADD}
+endif
+
 if ENABLE_LIBFUZZER
 oxoolforkit_SOURCES += \
 		       common/DummyTraceEventEmitter.cpp
@@ -200,7 +213,6 @@ common_fuzzer_sources = \
 		       $(shared_sources)
 
 admin_fuzzer_CPPFLAGS = \
-			-DKIT_IN_PROCESS=1 \
 			$(AM_CPPFLAGS)
 admin_fuzzer_SOURCES = \
 		       $(common_fuzzer_sources) \
@@ -209,7 +221,6 @@ admin_fuzzer_LDFLAGS = -fsanitize=fuzzer $(AM_LDFLAGS)
 admin_fuzzer_LDADD = libsimd.a
 
 clientsession_fuzzer_CPPFLAGS = \
-				-DKIT_IN_PROCESS=1 \
 				$(AM_CPPFLAGS)
 clientsession_fuzzer_SOURCES = \
 			       $(common_fuzzer_sources) \
@@ -218,7 +229,6 @@ clientsession_fuzzer_LDFLAGS = -fsanitize=fuzzer $(AM_LDFLAGS)
 clientsession_fuzzer_LDADD = libsimd.a
 
 httpresponse_fuzzer_CPPFLAGS = \
-				-DKIT_IN_PROCESS=1 \
 				$(AM_CPPFLAGS)
 httpresponse_fuzzer_SOURCES = \
 			       $(common_fuzzer_sources) \
@@ -227,7 +237,6 @@ httpresponse_fuzzer_LDFLAGS = -fsanitize=fuzzer $(AM_LDFLAGS)
 httpresponse_fuzzer_LDADD = libsimd.a
 
 httpecho_fuzzer_CPPFLAGS = \
-				-DKIT_IN_PROCESS=1 \
 				$(AM_CPPFLAGS) \
         -I${top_srcdir}/test
 httpecho_fuzzer_SOURCES = \
@@ -482,6 +491,21 @@ run-one: setup-wsd
 			--o:security.capabilities="$(CAPABILITIES)" \
 			--o:logging.file[@enable]=true --o:logging.level=trace \
 			--singlekit
+
+run-inproc: setup-wsd
+	@echo "Launching oxoolwsd-inproc"
+	.libs/oxoolwsd-inproc $(COMMON_PARAMS) \
+			--config-file="$(abs_top_srcdir)/@PACKAGE@.xml" \
+			--o:security.capabilities="$(CAPABILITIES)" \
+			--o:logging.file[@enable]=true --o:logging.level=trace
+
+run-massif-inproc: setup-wsd
+	@echo "Launching oxoolwsd under valgrind for single process"
+	valgrind --tool=massif --num-callers=64 --trace-children=no -v \
+		.libs/oxoolwsd-inproc $(COMMON_PARAMS) \
+      --config-file="$(abs_top_srcdir)/@PACKAGE@.xml" \
+      --o:security.capabilities="$(CAPABILITIES)" \
+			--o:logging.file[@enable]=false --o:logging.level=trace
 endif
 
 sync-writer:
