--- a/Makefile.am
+++ b/Makefile.am
@@ -67,7 +67,7 @@ oxoolwsdconfig_DATA = $(WSD_NAME).xml \
 ACLOCAL_AMFLAGS = -I m4
 
 # quick and easy for now.
-include_paths = -I${top_srcdir}/common -I${top_srcdir}/net -I${top_srcdir}/wsd -I${top_srcdir}/kit ${ZLIB_CFLAGS} ${ZSTD_CFLAGS} ${PNG_CFLAGS} ${FONTCONFIG_CFLAGS}
+include_paths = -I${top_srcdir}/common -I${top_srcdir}/net -I${top_srcdir}/wsd -I${top_srcdir}/kit ${ZLIB_CFLAGS} ${ZSTD_CFLAGS} ${PNG_CFLAGS} ${FONTCONFIG_CFLAGS} ${OSSII_CFLAGS}
 if ENABLE_SSL
 include_paths += ${OPENSSL_CFLAGS}
 endif
@@ -83,17 +83,17 @@ endif
 
 AM_LDFLAGS = -Wl,-E -lpam $(ZLIB_LIBS) $(ZSTD_LIBS) ${PNG_LIBS} ${FONTCONFIG_LIBS} ${OSSII_LIBS}
 
+if ENABLE_DEBUG
+AM_LDFLAGS += -Wl,-E,-rpath,"@abs_top_builddir@/ossii/src/lib/.libs"
+endif
+
 # Clang's linker doesn't like -pthread.
 if !HAVE_CLANG
 AM_LDFLAGS += -pthread
 endif
 
-#OSSII_LIBS = ossii/src/lib/@LIB_NAME@.la
-
 if ENABLE_SSL
 AM_LDFLAGS += ${OPENSSL_LIBS}
-oxoolwsd_LDADD = ${OSSII_LIBS}
-oxoolconfig_LDADD = ${OSSII_LIBS}
 else
 oxoolwsd_LDADD = ${OPENSSL_LIBS}
 oxoolconfig_LDADD = ${OPENSSL_LIBS}
@@ -171,12 +171,10 @@ endif
 
 connect_SOURCES = tools/Connect.cpp \
                   common/DummyTraceEventEmitter.cpp
-connect_LDADD = ${OSSII_LIBS}
 
 lokitclient_SOURCES = common/Log.cpp \
                       common/DummyTraceEventEmitter.cpp \
                       tools/KitClient.cpp
-lokitclient_LDADD = ${OSSII_LIBS}
 
 noinst_LIBRARIES = libsimd.a
 libsimd_a_SOURCES = kit/DeltaSimd.c
@@ -249,12 +247,8 @@ endif # ENABLE_LIBFUZZER
 
 clientnb_SOURCES = net/clientnb.cpp \
                    common/DummyTraceEventEmitter.cpp
-clientnb_LDADD = ${OSSII_LIBS}
 
 oxoolmount_SOURCES = tools/mount.cpp
-if ENABLE_DEBUG
-oxoolmount_LDADD = ${OSSII_LIBS}
-endif
 
 oxoolmap_SOURCES = tools/map.cpp
 
@@ -263,7 +257,6 @@ oxoolconvert_SOURCES = tools/Tool.cpp
 oxoolstress_CPPFLAGS = -DTDOC=\"$(abs_top_srcdir)/test/data\" ${include_paths}
 oxoolstress_SOURCES = tools/Stress.cpp \
                      common/DummyTraceEventEmitter.cpp
-oxoolstress_LDADD = ${OSSII_LIBS}
 
 oxoolconfig_SOURCES = tools/Config.cpp \
 		     tools/ConfigMigrationAssistant.cpp \
@@ -271,7 +264,6 @@ oxoolconfig_SOURCES = tools/Config.cpp \
 
 oxoolsocketdump_SOURCES = tools/WebSocketDump.cpp \
 			 common/DummyTraceEventEmitter.cpp
-oxoolsocketdump_LDADD = ${OSSII_LIBS}
 
 wsd_headers = wsd/Admin.hpp \
               wsd/AdminModel.hpp \
