Restore the original Map State Change Handler.
Will additionally extend the functions of OSSII,
Rewritten in Map .StateChanges.Extend.js.
Avoid difficulties in future integration.

Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I7186250ba1837253ae25fa6b255af99fc325c8b6

--- a/ossii/browser/Makefile.am
+++ b/ossii/browser/Makefile.am
@@ -23,6 +23,7 @@ $(DIST_FOLDER)/uiconfig/%: $(srcdir)/uiconfig/%
 # 準備打包的 JS 檔案列表
 OXOOL_JS_LIST = \
 	js/map/handler/Map.AlternativeCommand.js \
+	js/map/handler/Map.StateChanges.Extend.js \
 	js/control/Permission.Extensions.js \
 	js/control/IconAlias.js \
 	js/control/Toolbar.Extensions.js \
