--- a/Makefile.am
+++ b/Makefile.am
@@ -349,7 +349,7 @@ noinst_HEADERS = $(wsd_headers) $(shared_headers) $(kit_headers) \
                  test/UnitHTTP.hpp \
                  test/HttpTestServer.hpp \
                  test/WopiTestServer.hpp \
-                 test/countoxoolkits.hpp \
+                 test/KitPidHelpers.hpp \
                  test/lokassert.hpp \
                  test/test.hpp \
                  test/testlog.hpp \
