--- a/ossii/online.pc.in
+++ b/ossii/online.pc.in
@@ -13,5 +13,5 @@ module_data_dir=@OXOOLWSD_MODULE_DATA_DIR@
 Name: @PACKAGE@
 Description:
 Version: @VERSION@
-Libs: -L${libdir} -l@LIB_LINK_NAME@
+Libs: -L${libdir} -l@OSSII_LIB_NAME@
 Cflags: -I${includedir}/OxOOL -I${includedir}/OxOOL/common -I${includedir}/OxOOL/net -I${includedir}/OxOOL/wsd -I${includedir}/OxOOL/LibreOfficeKit
