module: Add 'make run' to avoid using instructions like test.sh file.xml
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Ie24ab0b8c8ece84b8f61d42c781d5ab56fb93f2f

--- a/ossii/src/development-tools/module-template/configure.ac
+++ b/ossii/src/development-tools/module-template/configure.ac
@@ -156,6 +156,7 @@ Module details:
     adminItem       ${MODULE_ADMIN_ITEM}
 
 \$ make # to compile
+\$ make run # to test this module
 ])
 
 dnl vim:set shiftwidth=4 softtabstop=4 expandtab:
