Added Watchdog.hpp to the development kit
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I0ac99bae8f775780d003464221f438abe4a67bc1

--- a/ossii/src/include/Makefile.am
+++ b/ossii/src/include/Makefile.am
@@ -65,7 +65,8 @@ common_headers = \
     $(top_srcdir)/common/security.h \
     $(top_srcdir)/common/SpookyV2.h \
     $(top_srcdir)/common/CommandControl.hpp \
-    $(top_srcdir)/common/Simd.hpp
+    $(top_srcdir)/common/Simd.hpp \
+    $(top_srcdir)/common/Watchdog.hpp
 
 common_includedir = $(includedir)/OxOOL/common
 common_include_HEADERS = $(common_headers)
