module: Strengthen the module architecture.
Added module capabilities to interact with the front-end client.

Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Ife510f78dd06d582ee783ec2837971c62b414056

--- a/ossii/browser/Makefile.am
+++ b/ossii/browser/Makefile.am
@@ -22,6 +22,8 @@ $(DIST_FOLDER)/uiconfig/%: $(srcdir)/uiconfig/%
 
 # 準備打包的 JS 檔案列表
 OXOOL_JS_LIST = \
+	js/OxOOL.js \
+	js/ModuleManager.js \
 	js/map/handler/Map.AlternativeCommand.js \
 	js/map/handler/Map.StateChanges.Extend.js \
 	js/control/Permission.Extensions.js \
@@ -32,7 +34,6 @@ OXOOL_JS_LIST = \
 	js/control/Control.ContextMenu.js \
 	js/control/Control.Menubar.js \
 	js/control/Control.ReadonlyBar.js \
-	js/control/Control.OxOOLMain.js \
 	js/spectrum.js \
 	js/main.js
 
